css bugfix: <section> is wrapping main container

--- a/hjlog/static/css/hjlog.css
+++ b/hjlog/static/css/hjlog.css
@@ -7,12 +7,7 @@ body {
 }
 section {
   min-height: 100%;
-  height: 100%;
-}
-.main.container {
-  min-height: 100%;
   height: auto !important;
-  height: 100%;
   margin: 7em auto 5em;
 }
 .wireframe {
